Fri Jun  3 23:23:02 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* intern.h (rb_fdset_t): deal with fd bit sets over FD_SETSIZE.
	  fixed: [ruby-dev:26187]

	* eval.c (rb_fd_init, rb_fd_term, rb_fd_zero, rb_fd_set, rb_fd_clr,
	  rb_fd_isset, rb_fd_copy): ditto.

	* io.c (rb_io_wait_readable, rb_io_wait_writable, rb_f_select): ditto.

	* ext/io/wait/wait.c (io_wait): ditto.

	* ext/socket/socket.c (wait_connectable, unix_recv_io): ditto.

Fri Jun  3 14:06:12 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: fix typo.

Thu Jun  2 23:42:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y: pragma support on ripper.  [ruby-dev:26266]

Thu Jun  2 00:02:16 2005  Minero Aoki  <aamine@loveruby.net>

	* struct.c: accessing >10 member caused segmentation fault.
	  [ruby-dev:26247]

	* test/ruby/test_struct.rb: test it.

Wed Jun  1 11:30:09 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: can use single quote character in DESTDIR.
	  [ruby-dev:26205]

	* bcc32/Makefile.sub: Dir.glob in 1.9 doesn't treat \ as path separator.
	  [ruby-dev:26254]

Wed Jun  1 00:11:06 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (method_call): new experiment: "(expr)(args...)" to
	  invoke "expr.call(args...)".  [EXPERIMENTAL]

Tue May 31 23:43:41 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (command): revert implicit "call" for local variables.

Tue May 31 15:52:45 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): should
	  break the loop if the socket reached to EOF. [ruby-talk:142285]

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): send response
	  without reading the whole request body if keep-alive is diabled.
	  [experimental]

Mon May 30 23:48:29 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/macpkg.rb: add PACKAGE_NAME information of Tcl/Tk
	  Extension.

	* ext/tk/lib/tk/msgcat.rb: ditto.

	* ext/tk/lib/tk/winpkg.rb: ditto.
